fix popover overflow

--- a/src/styles/HomePage/Categories.css
+++ b/src/styles/HomePage/Categories.css
@@ -16,7 +16,7 @@
     .img-wrapper{
       margin:0;
       padding: 0;
-     
+      overflow: hidden;
     }
   .category-card img {
     height: auto;
